fixed info tab being too wide

--- a/src/style.css
+++ b/src/style.css
@@ -48,6 +48,10 @@
 
 /********************************* CONTROLS ***********************************/
 
+* {
+    box-sizing: border-box;
+}
+
 body {
     color: var(--primary7);
 }
